...
                    <view key="view" contentMode="scaleToFill" id="8IM-RJ-bjp">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <viewLayoutGuide key="safeArea" id="HX8-dy-kyI"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Settings" image="settings" id="8oB-Sg-c05"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ChX-73-nnQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-21" y="1811"/>
        </scene>
        <!--Explore-->
...
                                    <rect key="frame" x="0.0" y="0.0" width="306" height="332"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SC7-qZ-hVE">
                                            <rect key="frame" x="0.0" y="0.0" width="306" height="263"/>
                                            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                            <accessibility key="accessibilityConfiguration" identifier="Category Image">
                                                <bool key="isElement" value="YES"/>
                                            </accessibility>
                                        </imageView>
                                        <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bpl-82-GKc">
                                            <rect key="frame" x="0.0" y="0.0" width="306" height="67"/>
                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="kkj-Dy-1ZF">
...
                        <connections>
                            <outlet property="dataSource" destination="PXn-OS-K3h" id="Ke8-yb-8RO"/>
                            <outlet property="delegate" destination="PXn-OS-K3h" id="tvw-op-R27"/>
                        </connections>
                    </collectionView>
                    <tabBarItem key="tabBarItem" title="Item" id="1au-Vd-CrP"/>
                    <navigationItem key="navigationItem" title="Explore" id="fhp-j2-ZWH"/>
                </collectionViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Dad-Xu-aov" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="885" y="380"/>
        </scene>
        <!--Explore-->
...
                            <constraint firstItem="llk-Yr-whl" firstAttribute="top" secondItem="Cmm-ab-SzD" secondAttribute="top" id="5Ik-hu-ftz"/>
                            <constraint firstItem="llk-Yr-whl" firstAttribute="trailing" secondItem="Cmm-ab-SzD" secondAttribute="trailing" id="BLg-vc-rR4"/>
                            <constraint firstItem="llk-Yr-whl" firstAttribute="leading" secondItem="Cmm-ab-SzD" secondAttribute="leading" id="lCM-Ol-itB"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Cmm-ab-SzD"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Search" image="search" id="b56-cE-wrc"/>
                    <connections>
                        <outlet property="searchDisplayController" destination="9Y6-EB-3mC" id="cdr-qS-eQC"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ql3-L7-uZs" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <searchDisplayController id="9Y6-EB-3mC">
...
                            <constraint firstItem="GN1-LM-fMh" firstAttribute="trailing" secondItem="vPf-bZ-LSR" secondAttribute="trailing" id="D2d-w2-GH4"/>
                            <constraint firstItem="GN1-LM-fMh" firstAttribute="bottom" secondItem="vPf-bZ-LSR" secondAttribute="bottom" id="QWB-Sm-VXt"/>
                            <constraint firstItem="GN1-LM-fMh" firstAttribute="top" secondItem="lgy-aR-PIh" secondAttribute="top" id="soc-Dh-oy2"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="vPf-bZ-LSR"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Favorites" image="favorite" id="XMW-g0-8hj"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dbZ-uW-RKo" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-23" y="2538"/>
        </scene>
        <!--Item-->
...
                                                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="30" id="S4P-D6-RiC"/>
                                                                <constraint firstAttribute="width" constant="30" id="o9b-fE-W3g"/>
                                                            </constraints>
                                                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <state key="normal" image="Like"/>
                                                        </button>
                                                        <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kKR-UV-TUF">
                                                            <rect key="frame" x="30" y="0.0" width="30" height="30"/>
                                                            <state key="normal" image="share"/>
                                                        </button>
                                                    </subviews>
...
