...

import UIKit
import CoreData

class ExploreCollectionViewController: UICollectionViewController {
    
    var categories = ["Travel", "Cars", "Sneakers", "Food", "Sports", "Fashion", "Fitness", "Drinks", "Nature"]
    var mainContext: NSManagedObjectContext?

    override func viewDidLoad() {
        super.viewDidLoad()
        mainContext = Store.shareInstance?.persistentContainer.viewContext
        navigationController?.hideShadow()
...
